# Lya

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  check_brain.sh  deploy.sh  install.py  pyproject.toml  run_lya.py  run_lya_service.py
.docker/: Dockerfile  docker-compose.yml
.github/workflows/: ci.yml  release.yml
docs/architecture/: 000_overview.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  STRUCTURE.md
src/lya/: __init__.py
src/lya/adapters/: __init__.py
src/lya/adapters/api/: __init__.py  app.py  websocket.py  websocket_server.py
src/lya/adapters/api/middleware/: __init__.py  logging.py  rate_limit.py
src/lya/adapters/api/routes/: agent.py  agent_routes.py  capabilities.py  goals.py  health.py  memories.py  tasks.py
src/lya/adapters/api/static/: dashboard.js  index.html  style.css
src/lya/adapters/cli/: __init__.py  main.py  main_cli.py
src/lya/adapters/telegram/: __init__.py  keyboard_builder.py  telegram_bot.py
src/lya/application/commands/: __init__.py  create_agent.py  create_goal.py  main_loop.py
src/lya/application/ports/: __init__.py
src/lya/application/ports/incoming/: __init__.py  agent_commands.py  user_queries.py
src/lya/application/ports/outgoing/: __init__.py  llm_port.py  memory_port.py  tool_port.py
src/lya/core/: __init__.py  agent.py  agent_core.py  event_bus.py  orchestrator.py
src/lya/domain/: __init__.py  exceptions.py
src/lya/domain/models/: __init__.py  agent.py  capability.py  deployment.py  distributed.py  events.py  goal.py  healing.py  improvement.py  memory.py  optimization.py  task.py
src/lya/domain/repositories/: __init__.py  goal_repo.py  memory_repo.py  task_repo.py
src/lya/domain/services/: __init__.py  memory_service.py  planning_service.py  reasoning_service.py  self_improvement_service.py
src/lya/infrastructure/: __init__.py
src/lya/infrastructure/config/: __init__.py  logging.py  settings.py
src/lya/infrastructure/deployment/: __init__.py  deployment_manager.py  modal_generator.py
src/lya/infrastructure/distributed/: __init__.py  cluster_manager.py  distributed_cluster.py
src/lya/infrastructure/healing/: __init__.py  healing_system.py  self_healing.py  self_healing_system.py
src/lya/infrastructure/llm/: __init__.py  anthropic_adapter.py  factory.py  model_router.py  ollama_adapter.py  openai_adapter.py  prompt_optimizer.py  prompt_template.py  tool_calling.py
src/lya/infrastructure/memory/: __init__.py  conversation_summarizer.py  memory_adapter.py  preference_learner.py  working_buffer.py  working_memory.py
src/lya/infrastructure/messaging/: __init__.py  event_bus.py
src/lya/infrastructure/monitoring/: __init__.py  health_monitor.py  monitoring_service.py  monitoring_system.py
src/lya/infrastructure/optimization/: __init__.py  optimization_engine.py  optimization_service.py
src/lya/infrastructure/persistence/: __init__.py  chroma_embedding_service.py  chroma_memory_repo.py  chroma_memory_repository.py  embedding_service.py  file_goal_repository.py  file_task_repository.py  neo4j_adapter.py  pinecone_adapter.py
src/lya/infrastructure/persistence/vector/: __init__.py  chroma_adapter.py
src/lya/infrastructure/rag/: __init__.py  chunker.py  document_loader.py  rag_service.py
src/lya/infrastructure/scheduler/: __init__.py  task_scheduler.py  time_parser.py
src/lya/infrastructure/security/: __init__.py  capability_sandbox.py  hardening.py  security_hardening.py
src/lya/infrastructure/self_improvement/: __init__.py  capability_generator.py  self_improvement_service.py  tool_generator.py  tool_loader.py
src/lya/infrastructure/tools/: __init__.py  browser_automation.py  capability_registry.py  capability_templates.py  direct_access.py  sdlc_tool.py  system_tools.py  tool_registry.py  web_tools.py
src/lya/infrastructure/tools/browser/: __init__.py  playwright_adapter.py
src/lya/infrastructure/tools/capability_templates/: __init__.py  git_operations.py
src/lya/infrastructure/tools/filesystem/: __init__.py  file_manager.py
src/lya/infrastructure/tools/git/: __init__.py  git_adapter.py  git_manager.py  github_adapter.py  gitlab_adapter.py
src/lya/infrastructure/voice/: __init__.py  stt_adapter.py  tts_adapter.py
src/lya/infrastructure/workflow/: state_graph.py
src/lya/infrastructure/workflows/: state_graph.py
src/lya/tests/integration/: test_runner.py
tests/: __init__.py  conftest.py
tests/integration/: test_modules.py
tests/mocks/: __init__.py  adapters.py  mock_llm_port.py  mock_repositories.py
tests/unit/: test_memory.py  test_memory_service.py
